updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -12,37 +12,46 @@ This is a complete list of available classes:
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; The primary data structure used to store analytics data in Piwik.
 - [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; The DataTable Map is a way to store an array of dataTable.
 - [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; A DataTable is composed of rows.
-- [`Piwik\Date`](Piwik/Date.md) &mdash; Date object widely used in Piwik.
-- [`Piwik\Db`](Piwik/Db.md) &mdash; SQL wrapper
-- [`Piwik\Filesystem`](Piwik/Filesystem.md) &mdash; Class Filesystem
+- [`Piwik\Date`](Piwik/Date.md) &mdash; Utility class that wraps date/time related PHP functions.
+- [`Piwik\Db`](Piwik/Db.md) &mdash; Helper class that contains SQL related helper functions.
+- [`Piwik\Filesystem`](Piwik/Filesystem.md) &mdash; Contains helper functions that involve the filesystem.
+- [`Piwik\FrontController`](Piwik/FrontController.md) &mdash; This singleton dispatches requests to the appropriate plugin Controller.
 - [`Piwik\Http`](Piwik/Http.md) &mdash; Server-side http client to retrieve content from remote servers, and optionally save to a local file.
-- [`Piwik\IP`](Piwik/IP.md) &mdash; Handling IP addresses (both IPv4 and IPv6).
-- [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility.
+- [`Piwik\IP`](Piwik/IP.md) &mdash; Contains IP address helper functions (for both IPv4 and IPv6).
+- [`Piwik\Log`](Piwik/Log.md) &mdash; Logging utility class.
+- [`Piwik\Mail`](Piwik/Mail.md) &mdash; Class for sending mails, for more information see: [http://framework.zend.com/manual/en/zend.mail.html](#http://framework.zend.com/manual/en/zend.mail.html)
 - [`Piwik\Menu\MenuAdmin`](Piwik/Menu/MenuAdmin.md)
 - [`Piwik\Menu\MenuTop`](Piwik/Menu/MenuTop.md)
-- [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class holds the various mappings we use to internally store and manipulate metrics.
-- [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Class MetricsFormatter
+- [`Piwik\Metrics`](Piwik/Metrics.md) &mdash; This class contains metadata regarding core metrics and contains several related helper functions.
+- [`Piwik\MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; Contains helper function that format numerical values in different ways.
 - [`Piwik\Nonce`](Piwik/Nonce.md) &mdash; Nonce class.
+- [`Piwik\Option`](Piwik/Option.md) &mdash; Convenient key-value storage for user specified options and temporary data that needs to be persisted beyond one request.
+- [`Piwik\Period`](Piwik/Period.md) &mdash; Date range representation.
 - [`Piwik\Period\Day`](Piwik/Period/Day.md)
 - [`Piwik\Period\Month`](Piwik/Period/Month.md)
 - [`Piwik\Period\Range`](Piwik/Period/Range.md) &mdash; from a starting date to an ending date
 - [`Piwik\Period\Week`](Piwik/Period/Week.md)
 - [`Piwik\Period\Year`](Piwik/Period/Year.md)
 - [`Piwik\Piwik`](Piwik/Piwik.md) &mdash; Main piwik helper class.
-- [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Abstract class to define a Plugin.
+- [`Piwik\Plugin`](Piwik/Plugin.md) &mdash; Base class of all Plugin Descriptor classes.
 - [`Piwik\Plugin\Controller`](Piwik/Plugin/Controller.md) &mdash; Parent class of all plugins Controllers (located in /plugins/PluginName/Controller.php It defines some helper functions controllers can use.
 - [`Piwik\Plugin\ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md) &mdash; Parent class of all plugins Controllers with admin functions
 - [`Piwik\Plugin\ViewDataTable`](Piwik/Plugin/ViewDataTable.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
 - [`Piwik\Plugin\Visualization`](Piwik/Plugin/Visualization.md) &mdash; Base class for all DataTable visualizations.
+- [`Piwik\RankingQuery`](Piwik/RankingQuery.md) &mdash; The ranking query class wraps an arbitrary SQL query with more SQL that limits the number of results while grouping the rest to &quot;Others&quot; and allows for some more fancy things that can be configured via method calls of this class.
 - [`Piwik\ScheduledTask`](Piwik/ScheduledTask.md) &mdash; ScheduledTask is used by the task scheduler and by plugins to configure runnable tasks.
 - [`Piwik\ScheduledTime\Daily`](Piwik/ScheduledTime/Daily.md) &mdash; Daily class is used to schedule tasks every day.
 - [`Piwik\ScheduledTime\Hourly`](Piwik/ScheduledTime/Hourly.md) &mdash; Hourly class is used to schedule tasks every hour.
 - [`Piwik\ScheduledTime\Monthly`](Piwik/ScheduledTime/Monthly.md) &mdash; Monthly class is used to schedule tasks every month.
 - [`Piwik\ScheduledTime\Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; Weekly class is used to schedule tasks every week.
-- [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Class SettingsPiwik
-- [`Piwik\Site`](Piwik/Site.md)
+- [`Piwik\Segment`](Piwik/Segment.md) &mdash; Limits the set of visits Piwik uses when aggregating analytics data.
+- [`Piwik\SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; Contains helper methods that can be used to get common Piwik settings.
+- [`Piwik\SettingsServer`](Piwik/SettingsServer.md) &mdash; Contains helper methods that can be used to get information regarding the server, its settings and PHP settings.
+- [`Piwik\Singleton`](Piwik/Singleton.md) &mdash; The singleton class restricts the instantiation of a class to one object only.
+- [`Piwik\Site`](Piwik/Site.md) &mdash; Provides access to individual site data (such as name, URL, etc.).
+- [`Piwik\TaskScheduler`](Piwik/TaskScheduler.md) &mdash; Manages scheduled task execution.
 - [`Piwik\Tracker\Visit`](Piwik/Tracker/Visit.md) &mdash; Class used to handle a Visit.
-- [`Piwik\Url`](Piwik/Url.md) &mdash; Class to retrieve absolute URL or URI components of the current URL, and handle URL redirection.
+- [`Piwik\Url`](Piwik/Url.md) &mdash; Provides URL related helper methods.
 - [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Class UrlHelper
 - [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
 - [`Piwik\View`](Piwik/View.md) &mdash; View class to render the user interface
