--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -54,12 +54,15 @@ Index
 - [`addPeriod()`](Piwik/Date.md#addPeriod) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addEntry()`](Piwik/Menu/MenuAdmin.md#addEntry) &mdash; _Method in class_ [`MenuAdmin`](Piwik/Menu/MenuAdmin.md)
 - [`addEntry()`](Piwik/Menu/MenuTop.md#addEntry) &mdash; _Method in class_ [`MenuTop`](Piwik/Menu/MenuTop.md)
+- [`advancedFactory()`](Piwik/Period.md#advancedFactory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`addSubperiod()`](Piwik/Period/Day.md#addSubperiod) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`addAction()`](Piwik/Piwik.md#addAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`activate()`](Piwik/Plugin.md#activate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`assignTemplateVar()`](Piwik/Plugin/Visualization.md#assignTemplateVar) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`afterGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#afterGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`afterAllFilteresAreApplied()`](Piwik/Plugin/Visualization.md#afterAllFilteresAreApplied) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`addLabelColumn()`](Piwik/RankingQuery.md#addLabelColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
+- [`addColumn()`](Piwik/RankingQuery.md#addColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
 
@@ -81,11 +84,9 @@ Index
 - [`compareWeek()`](Piwik/Date.md#compareWeek) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`compareMonth()`](Piwik/Date.md#compareMonth) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`createDatabaseObject()`](Piwik/Db.md#createDatabaseObject) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
-- [`createHtAccess()`](Piwik/Filesystem.md#createHtAccess) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
-- [`checkIfFileSystemIsNFS()`](Piwik/Filesystem.md#checkIfFileSystemIsNFS) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`copy()`](Piwik/Filesystem.md#copy) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`copyRecursive()`](Piwik/Filesystem.md#copyRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
-- [`configCurlCertificate()`](Piwik/Http.md#configCurlCertificate) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
+- [`clearCache()`](Piwik/Option.md#clearCache) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`checkUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#checkUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`checkUserIsNotAnonymous()`](Piwik/Piwik.md#checkUserIsNotAnonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`checkUserIsSuperUser()`](Piwik/Piwik.md#checkUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -98,7 +99,6 @@ Index
 - [`$config()`](Piwik/Plugin/ViewDataTable.md#$config) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`canDisplayViewDataTable()`](Piwik/Plugin/ViewDataTable.md#canDisplayViewDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`$className()`](Piwik/ScheduledTask.md#$className) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
-- [`$cachedKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#$cachedKnownSegmentsToArchive) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`clearCache()`](Piwik/Site.md#clearCache) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`clearCompiledTemplates()`](Piwik/View.md#clearCompiledTemplates) &mdash; _Method in class_ [`View`](Piwik/View.md)
 
@@ -121,10 +121,12 @@ Index
 - [`Db`](Piwik/Db.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`deleteAllRows()`](Piwik/Db.md#deleteAllRows) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`dropTables()`](Piwik/Db.md#dropTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
-- [`deleteAllCacheOnUpdate()`](Piwik/Filesystem.md#deleteAllCacheOnUpdate) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
+- [`dispatch()`](Piwik/FrontController.md#dispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
 - [`downloadChunk()`](Piwik/Http.md#downloadChunk) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
 - [`debug()`](Piwik/Log.md#debug) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`discardNonce()`](Piwik/Nonce.md#discardNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`delete()`](Piwik/Option.md#delete) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
+- [`deleteLike()`](Piwik/Option.md#deleteLike) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`Day`](Piwik/Period/Day.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`deactivate()`](Piwik/Plugin.md#deactivate) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`displayWarningIfConfigFileNotWritable()`](Piwik/Plugin/ControllerAdmin.md#displayWarningIfConfigFileNotWritable) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
@@ -137,7 +139,7 @@ Index
 - [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enableRecursiveSort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
-- [`exitWithErrorMessage()`](Piwik/Piwik.md#exitWithErrorMessage) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`execute()`](Piwik/RankingQuery.md#execute) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`extractSearchEngineInformationFromUrl()`](Piwik/UrlHelper.md#extractSearchEngineInformationFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 
 ### F
@@ -153,7 +155,10 @@ Index
 - [`fetchOne()`](Piwik/Db.md#fetchOne) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`fetchAssoc()`](Piwik/Db.md#fetchAssoc) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`Filesystem`](Piwik/Filesystem.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`FrontController`](Piwik/FrontController.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`fetchDispatch()`](Piwik/FrontController.md#fetchDispatch) &mdash; _Method in class_ [`FrontController`](Piwik/FrontController.md)
 - [`fetchRemoteFile()`](Piwik/Http.md#fetchRemoteFile) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
+- [`factory()`](Piwik/Period.md#factory) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`Factory`](Piwik/ViewDataTable/Factory.md) &mdash; _Class in namespace_ [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
 
 ### G
@@ -180,7 +185,6 @@ Index
 - [`getLanguageToCountryList()`](Piwik/Common.md#getLanguageToCountryList) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getSqlStringFieldsArray()`](Piwik/Common.md#getSqlStringFieldsArray) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`getSortedByColumnName()`](Piwik/DataTable.md#getSortedByColumnName) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`getRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#getRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowFromLabel()`](Piwik/DataTable.md#getRowFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowIdFromLabel()`](Piwik/DataTable.md#getRowIdFromLabel) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getEmptyClone()`](Piwik/DataTable.md#getEmptyClone) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -197,9 +201,8 @@ Index
 - [`getLastRow()`](Piwik/DataTable.md#getLastRow) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getRowsCountRecursive()`](Piwik/DataTable.md#getRowsCountRecursive) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getSerialized()`](Piwik/DataTable.md#getSerialized) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`getAllTableMetadata()`](Piwik/DataTable.md#getAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getMetadata()`](Piwik/DataTable.md#getMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`getColumnAggregationOperations()`](Piwik/DataTable.md#getColumnAggregationOperations) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`getAllTableMetadata()`](Piwik/DataTable.md#getAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getKeyName()`](Piwik/DataTable/Map.md#getKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getRowsCount()`](Piwik/DataTable/Map.md#getRowsCount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getDataTables()`](Piwik/DataTable/Map.md#getDataTables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -222,10 +225,8 @@ Index
 - [`getLocalized()`](Piwik/Date.md#getLocalized) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`get()`](Piwik/Db.md#get) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`getDbLock()`](Piwik/Db.md#getDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
-- [`getPathToPiwikRoot()`](Piwik/Filesystem.md#getPathToPiwikRoot) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`globr()`](Piwik/Filesystem.md#globr) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`getTransportMethod()`](Piwik/Http.md#getTransportMethod) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
-- [`getUserAgent()`](Piwik/Http.md#getUserAgent) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
 - [`getIPv4FromMappedIPv6()`](Piwik/IP.md#getIPv4FromMappedIPv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getIpsForRange()`](Piwik/IP.md#getIpsForRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`getIpFromHeader()`](Piwik/IP.md#getIpFromHeader) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
@@ -251,6 +252,18 @@ Index
 - [`getNonce()`](Piwik/Nonce.md#getNonce) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getOrigin()`](Piwik/Nonce.md#getOrigin) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
 - [`getAcceptableOrigins()`](Piwik/Nonce.md#getAcceptableOrigins) &mdash; _Method in class_ [`Nonce`](Piwik/Nonce.md)
+- [`get()`](Piwik/Option.md#get) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
+- [`getDateStart()`](Piwik/Period.md#getDateStart) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getDateEnd()`](Piwik/Period.md#getDateEnd) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getId()`](Piwik/Period.md#getId) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getLabel()`](Piwik/Period.md#getLabel) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getNumberOfSubperiods()`](Piwik/Period.md#getNumberOfSubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getSubperiods()`](Piwik/Period.md#getSubperiods) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`get()`](Piwik/Period.md#get) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getPrettyString()`](Piwik/Period.md#getPrettyString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getLocalizedShortString()`](Piwik/Period.md#getLocalizedShortString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getLocalizedLongString()`](Piwik/Period.md#getLocalizedLongString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`getRangeString()`](Piwik/Period.md#getRangeString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`getPrettyString()`](Piwik/Period/Day.md#getPrettyString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`getLocalizedShortString()`](Piwik/Period/Day.md#getLocalizedShortString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`getLocalizedLongString()`](Piwik/Period/Day.md#getLocalizedLongString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
@@ -275,8 +288,6 @@ Index
 - [`getSuperUserEmail()`](Piwik/Piwik.md#getSuperUserEmail) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getCurrentUserLogin()`](Piwik/Piwik.md#getCurrentUserLogin) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getCurrentUserTokenAuth()`](Piwik/Piwik.md#getCurrentUserTokenAuth) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
-- [`getModule()`](Piwik/Piwik.md#getModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
-- [`getAction()`](Piwik/Piwik.md#getAction) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`getInformation()`](Piwik/Plugin.md#getInformation) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getListHooksRegistered()`](Piwik/Plugin.md#getListHooksRegistered) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`getVersion()`](Piwik/Plugin.md#getVersion) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
@@ -290,6 +301,7 @@ Index
 - [`getDefaultRequestConfig()`](Piwik/Plugin/ViewDataTable.md#getDefaultRequestConfig) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#getViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`getDataTable()`](Piwik/Plugin/ViewDataTable.md#getDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`generateQuery()`](Piwik/RankingQuery.md#generateQuery) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`getObjectInstance()`](Piwik/ScheduledTask.md#getObjectInstance) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getClassName()`](Piwik/ScheduledTask.md#getClassName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`getMethodName()`](Piwik/ScheduledTask.md#getMethodName) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -303,11 +315,12 @@ Index
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Hourly.md#getRescheduledTime) &mdash; _Method in class_ [`Hourly`](Piwik/ScheduledTime/Hourly.md)
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Monthly.md#getRescheduledTime) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`getRescheduledTime()`](Piwik/ScheduledTime/Weekly.md#getRescheduledTime) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
-- [`getSalt()`](Piwik/SettingsPiwik.md#getSalt) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`getString()`](Piwik/Segment.md#getString) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
+- [`getHash()`](Piwik/Segment.md#getHash) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
+- [`getSelectQuery()`](Piwik/Segment.md#getSelectQuery) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`getKnownSegmentsToArchive()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchive) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
-- [`getKnownSegmentsToArchiveForSite()`](Piwik/SettingsPiwik.md#getKnownSegmentsToArchiveForSite) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
-- [`getWebsitesCountToDisplay()`](Piwik/SettingsPiwik.md#getWebsitesCountToDisplay) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`getPiwikUrl()`](Piwik/SettingsPiwik.md#getPiwikUrl) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`getInstance()`](Piwik/Singleton.md#getInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`getName()`](Piwik/Site.md#getName) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getMainUrl()`](Piwik/Site.md#getMainUrl) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getId()`](Piwik/Site.md#getId) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
@@ -326,6 +339,7 @@ Index
 - [`getCurrencyFor()`](Piwik/Site.md#getCurrencyFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedIpsFor()`](Piwik/Site.md#getExcludedIpsFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`getExcludedQueryParametersFor()`](Piwik/Site.md#getExcludedQueryParametersFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`getScheduledTimeForMethod()`](Piwik/TaskScheduler.md#getScheduledTimeForMethod) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
 - [`generateUniqueVisitorId()`](Piwik/Tracker/Visit.md#generateUniqueVisitorId) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`getCurrentUrl()`](Piwik/Url.md#getCurrentUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentUrlWithoutQueryString()`](Piwik/Url.md#getCurrentUrlWithoutQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
@@ -333,9 +347,9 @@ Index
 - [`getCurrentScriptPath()`](Piwik/Url.md#getCurrentScriptPath) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentScriptName()`](Piwik/Url.md#getCurrentScriptName) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentScheme()`](Piwik/Url.md#getCurrentScheme) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
-- [`getHost()`](Piwik/Url.md#getHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentHost()`](Piwik/Url.md#getCurrentHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getCurrentQueryString()`](Piwik/Url.md#getCurrentQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
+- [`getArrayFromCurrentQueryString()`](Piwik/Url.md#getArrayFromCurrentQueryString) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getQueryStringFromParameters()`](Piwik/Url.md#getQueryStringFromParameters) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getReferrer()`](Piwik/Url.md#getReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getQueryStringWithExcludedParameters()`](Piwik/UrlHelper.md#getQueryStringWithExcludedParameters) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
@@ -363,7 +377,6 @@ Index
 - [`isEarlier()`](Piwik/Date.md#isEarlier) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`isToday()`](Piwik/Date.md#isToday) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`isLockPrivilegeGranted()`](Piwik/Db.md#isLockPrivilegeGranted) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
-- [`isValidFilename()`](Piwik/Filesystem.md#isValidFilename) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`IP`](Piwik/IP.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`isIPv4()`](Piwik/IP.md#isIPv4) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`isIPv6()`](Piwik/IP.md#isIPv6) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
@@ -371,6 +384,7 @@ Index
 - [`isIpInRange()`](Piwik/IP.md#isIpInRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`info()`](Piwik/Log.md#info) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`isLowerValueBetter()`](Piwik/Metrics.md#isLowerValueBetter) &mdash; _Method in class_ [`Metrics`](Piwik/Metrics.md)
+- [`isMultiplePeriod()`](Piwik/Period.md#isMultiplePeriod) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`isUserIsSuperUserOrTheUser()`](Piwik/Piwik.md#isUserIsSuperUserOrTheUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`isUserIsSuperUser()`](Piwik/Piwik.md#isUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`isUserIsAnonymous()`](Piwik/Piwik.md#isUserIsAnonymous) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
@@ -383,16 +397,22 @@ Index
 - [`isTheme()`](Piwik/Plugin.md#isTheme) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`isViewDataTableId()`](Piwik/Plugin/ViewDataTable.md#isViewDataTableId) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`isRequestingSingleDataTable()`](Piwik/Plugin/ViewDataTable.md#isRequestingSingleDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
-- [`isUserCredentialsSanityCheckEnabled()`](Piwik/SettingsPiwik.md#isUserCredentialsSanityCheckEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`isEmpty()`](Piwik/Segment.md#isEmpty) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`isSegmentationEnabled()`](Piwik/SettingsPiwik.md#isSegmentationEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 - [`isUniqueVisitorsEnabled()`](Piwik/SettingsPiwik.md#isUniqueVisitorsEnabled) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`isArchivePhpTriggered()`](Piwik/SettingsServer.md#isArchivePhpTriggered) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
+- [`isIIS()`](Piwik/SettingsServer.md#isIIS) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
+- [`isApache()`](Piwik/SettingsServer.md#isApache) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
+- [`isWindows()`](Piwik/SettingsServer.md#isWindows) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
+- [`isTimezoneSupportEnabled()`](Piwik/SettingsServer.md#isTimezoneSupportEnabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
+- [`isGdExtensionEnabled()`](Piwik/SettingsServer.md#isGdExtensionEnabled) &mdash; _Method in class_ [`SettingsServer`](Piwik/SettingsServer.md)
 - [`$infoSites()`](Piwik/Site.md#$infoSites) &mdash; _Property in class_ [`Site`](Piwik/Site.md)
 - [`isEcommerceEnabled()`](Piwik/Site.md#isEcommerceEnabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isSiteSearchEnabled()`](Piwik/Site.md#isSiteSearchEnabled) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isEcommerceEnabledFor()`](Piwik/Site.md#isEcommerceEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`isSiteSearchEnabledFor()`](Piwik/Site.md#isSiteSearchEnabledFor) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
+- [`isTaskBeingExecuted()`](Piwik/TaskScheduler.md#isTaskBeingExecuted) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
 - [`isHostKnownAliasHost()`](Piwik/Tracker/Visit.md#isHostKnownAliasHost) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
-- [`isValidHost()`](Piwik/Url.md#isValidHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`isLookLikeUrl()`](Piwik/UrlHelper.md#isLookLikeUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`initializeTwig()`](Piwik/View.md#initializeTwig) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -418,6 +438,7 @@ Index
 - [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`$maxVisitsSummed()`](Piwik/DataTable/Row.md#$maxVisitsSummed) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`mkdir()`](Piwik/Filesystem.md#mkdir) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
+- [`Mail`](Piwik/Mail.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`MenuAdmin`](Piwik/Menu/MenuAdmin.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`MenuTop`](Piwik/Menu/MenuTop.md) &mdash; _Class in namespace_ [`Piwik\Menu`](Piwik/Menu)
 - [`Metrics`](Piwik/Metrics.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -425,6 +446,7 @@ Index
 - [`$mappingFromIdToNameGoal()`](Piwik/Metrics.md#$mappingFromIdToNameGoal) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`$mappingFromNameToId()`](Piwik/Metrics.md#$mappingFromNameToId) &mdash; _Property in class_ [`Metrics`](Piwik/Metrics.md)
 - [`MetricsFormatter`](Piwik/MetricsFormatter.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`makePeriodFromQueryParams()`](Piwik/Period.md#makePeriodFromQueryParams) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`Month`](Piwik/Period/Month.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`$methodName()`](Piwik/ScheduledTask.md#$methodName) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`$methodParameter()`](Piwik/ScheduledTask.md#$methodParameter) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
@@ -439,6 +461,7 @@ Index
 ### O
 
 - [`optimizeTables()`](Piwik/Db.md#optimizeTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
+- [`Option`](Piwik/Option.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$objectInstance()`](Piwik/ScheduledTask.md#$objectInstance) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 
 ### P
@@ -449,13 +472,14 @@ Index
 - [`prefixTable()`](Piwik/Common.md#prefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`P2N()`](Piwik/IP.md#P2N) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
+- [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`parseDateRange()`](Piwik/Period/Range.md#parseDateRange) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`Piwik`](Piwik/Piwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`postEvent()`](Piwik/Piwik.md#postEvent) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`Plugin`](Piwik/Plugin.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`postLoad()`](Piwik/Plugin.md#postLoad) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`partitionResultIntoMultipleGroups()`](Piwik/RankingQuery.md#partitionResultIntoMultipleGroups) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`$priority()`](Piwik/ScheduledTask.md#$priority) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
-- [`$piwikUrlCache()`](Piwik/SettingsPiwik.md#$piwikUrlCache) &mdash; _Property in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
 
 ### Q
 
@@ -474,14 +498,14 @@ Index
 - [`renameColumn()`](Piwik/DataTable/Row.md#renameColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`removeSubtable()`](Piwik/DataTable/Row.md#removeSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`releaseDbLock()`](Piwik/Db.md#releaseDbLock) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
-- [`realpath()`](Piwik/Filesystem.md#realpath) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`Range`](Piwik/Period/Range.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`removePeriod()`](Piwik/Period/Range.md#removePeriod) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`redirectToModule()`](Piwik/Piwik.md#redirectToModule) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`redirectToIndex()`](Piwik/Plugin/Controller.md#redirectToIndex) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`$requestConfig()`](Piwik/Plugin/ViewDataTable.md#$requestConfig) &mdash; _Property in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`render()`](Piwik/Plugin/ViewDataTable.md#render) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
-- [`rewriteTmpPathWithHostname()`](Piwik/SettingsPiwik.md#rewriteTmpPathWithHostname) &mdash; _Method in class_ [`SettingsPiwik`](Piwik/SettingsPiwik.md)
+- [`RankingQuery`](Piwik/RankingQuery.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`runTasks()`](Piwik/TaskScheduler.md#runTasks) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
 - [`redirectToReferrer()`](Piwik/Url.md#redirectToReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -492,12 +516,9 @@ Index
 - [`shouldLoadExpanded()`](Piwik/API/Request.md#shouldLoadExpanded) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`sanitizeInputValues()`](Piwik/Common.md#sanitizeInputValues) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`setRowsCountBeforeLimitFilter()`](Piwik/DataTable.md#setRowsCountBeforeLimitFilter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMetadata()`](Piwik/DataTable.md#setMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumAllowedRows()`](Piwik/DataTable.md#setMaximumAllowedRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`setColumnAggregationOperation()`](Piwik/DataTable.md#setColumnAggregationOperation) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
-- [`setColumnAggregationOperations()`](Piwik/DataTable.md#setColumnAggregationOperations) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setKeyName()`](Piwik/DataTable/Map.md#setKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`sumSubtable()`](Piwik/DataTable/Row.md#sumSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`setSubtable()`](Piwik/DataTable/Row.md#setSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -522,15 +543,18 @@ Index
 - [`segmentedFetchAll()`](Piwik/Db.md#segmentedFetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`segmentedQuery()`](Piwik/Db.md#segmentedQuery) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`sendHttpRequest()`](Piwik/Http.md#sendHttpRequest) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
-- [`sendHttpRequestBy()`](Piwik/Http.md#sendHttpRequestBy) &mdash; _Method in class_ [`Http`](Piwik/Http.md)
 - [`sanitizeIp()`](Piwik/IP.md#sanitizeIp) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`sanitizeIpRange()`](Piwik/IP.md#sanitizeIpRange) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
+- [`setFrom()`](Piwik/Mail.md#setFrom) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
+- [`set()`](Piwik/Option.md#set) &mdash; _Method in class_ [`Option`](Piwik/Option.md)
 - [`setDefaultEndDate()`](Piwik/Period/Range.md#setDefaultEndDate) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
-- [`setUserIsSuperUser()`](Piwik/Piwik.md#setUserIsSuperUser) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`setHostValidationVariablesView()`](Piwik/Plugin/Controller.md#setHostValidationVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setPeriodVariablesView()`](Piwik/Plugin/Controller.md#setPeriodVariablesView) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`setBasicVariablesAdminView()`](Piwik/Plugin/ControllerAdmin.md#setBasicVariablesAdminView) &mdash; _Method in class_ [`ControllerAdmin`](Piwik/Plugin/ControllerAdmin.md)
 - [`setDataTable()`](Piwik/Plugin/ViewDataTable.md#setDataTable) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
+- [`setLimit()`](Piwik/RankingQuery.md#setLimit) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
+- [`setOthersLabel()`](Piwik/RankingQuery.md#setOthersLabel) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
+- [`setColumnToMarkExcludedRows()`](Piwik/RankingQuery.md#setColumnToMarkExcludedRows) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`ScheduledTask`](Piwik/ScheduledTask.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`$scheduledTime()`](Piwik/ScheduledTask.md#$scheduledTime) &mdash; _Property in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
 - [`setDay()`](Piwik/ScheduledTime/Daily.md#setDay) &mdash; _Method in class_ [`Daily`](Piwik/ScheduledTime/Daily.md)
@@ -539,13 +563,15 @@ Index
 - [`setDay()`](Piwik/ScheduledTime/Monthly.md#setDay) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`setDayOfWeek()`](Piwik/ScheduledTime/Monthly.md#setDayOfWeek) &mdash; _Method in class_ [`Monthly`](Piwik/ScheduledTime/Monthly.md)
 - [`setDay()`](Piwik/ScheduledTime/Weekly.md#setDay) &mdash; _Method in class_ [`Weekly`](Piwik/ScheduledTime/Weekly.md)
+- [`Segment`](Piwik/Segment.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`SettingsPiwik`](Piwik/SettingsPiwik.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`SettingsServer`](Piwik/SettingsServer.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`Singleton`](Piwik/Singleton.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`setSingletonInstance()`](Piwik/Singleton.md#setSingletonInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`Site`](Piwik/Site.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`setSites()`](Piwik/Site.md#setSites) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`setSitesFromArray()`](Piwik/Site.md#setSitesFromArray) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`setRequest()`](Piwik/Tracker/Visit.md#setRequest) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
-- [`saveTrustedHostnameInConfig()`](Piwik/Url.md#saveTrustedHostnameInConfig) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
-- [`setHost()`](Piwik/Url.md#setHost) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`setContentType()`](Piwik/View.md#setContentType) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`setXFrameOptions()`](Piwik/View.md#setXFrameOptions) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`singleReport()`](Piwik/View.md#singleReport) &mdash; _Method in class_ [`View`](Piwik/View.md)
@@ -554,10 +580,12 @@ Index
 
 - [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`toString()`](Piwik/Period/Day.md#toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`toString()`](Piwik/Period/Year.md#toString) &mdash; _Method in class_ [`Year`](Piwik/Period/Year.md)
 - [`translate()`](Piwik/Piwik.md#translate) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
 - [`translateException()`](Piwik/Piwik.md#translateException) &mdash; _Method in class_ [`Piwik`](Piwik/Piwik.md)
+- [`TaskScheduler`](Piwik/TaskScheduler.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
 ### U
 
@@ -566,6 +594,7 @@ Index
 - [`unlockAllTables()`](Piwik/Db.md#unlockAllTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`unlinkRecursive()`](Piwik/Filesystem.md#unlinkRecursive) &mdash; _Method in class_ [`Filesystem`](Piwik/Filesystem.md)
 - [`uninstall()`](Piwik/Plugin.md#uninstall) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
+- [`unsetInstance()`](Piwik/Singleton.md#unsetInstance) &mdash; _Method in class_ [`Singleton`](Piwik/Singleton.md)
 - [`Url`](Piwik/Url.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`UrlHelper`](Piwik/UrlHelper.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
@@ -607,13 +636,18 @@ Index
 - [`__destruct()`](Piwik/DataTable/Row.md#__destruct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__toString()`](Piwik/DataTable/Row.md#__toString) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__toString()`](Piwik/Date.md#__toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
+- [`__construct()`](Piwik/Mail.md#__construct) &mdash; _Method in class_ [`Mail`](Piwik/Mail.md)
+- [`__construct()`](Piwik/Period.md#__construct) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
+- [`__toString()`](Piwik/Period.md#__toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
 - [`__toString()`](Piwik/Period/Day.md#__toString) &mdash; _Method in class_ [`Day`](Piwik/Period/Day.md)
 - [`__construct()`](Piwik/Period/Range.md#__construct) &mdash; _Method in class_ [`Range`](Piwik/Period/Range.md)
 - [`__construct()`](Piwik/Plugin.md#__construct) &mdash; _Method in class_ [`Plugin`](Piwik/Plugin.md)
 - [`__construct()`](Piwik/Plugin/Controller.md#__construct) &mdash; _Method in class_ [`Controller`](Piwik/Plugin/Controller.md)
 - [`__construct()`](Piwik/Plugin/ViewDataTable.md#__construct) &mdash; _Method in class_ [`ViewDataTable`](Piwik/Plugin/ViewDataTable.md)
 - [`__construct()`](Piwik/Plugin/Visualization.md#__construct) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
+- [`__construct()`](Piwik/RankingQuery.md#__construct) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`__construct()`](Piwik/ScheduledTask.md#__construct) &mdash; _Method in class_ [`ScheduledTask`](Piwik/ScheduledTask.md)
+- [`__construct()`](Piwik/Segment.md#__construct) &mdash; _Method in class_ [`Segment`](Piwik/Segment.md)
 - [`__construct()`](Piwik/Site.md#__construct) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__toString()`](Piwik/Site.md#__toString) &mdash; _Method in class_ [`Site`](Piwik/Site.md)
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
